2006-01-05  Edward Hervey  <edward@fluendo.com>

	* gst/base.defs:
	Use gchar* instead of guint8* for GstAdapter
	Added virtual methods definitions for base classes.
	Still have to override some functions, and figure
	out how to properly add reverse wrappers to the codegenerator.

2006-01-01  Edward Hervey  <edward@fluendo.com>

	First step at wrapping base elements in gst-python
	
	* configure.ac:
	Commenting out weird debugging statement dating from gst-python's
	and which causes problems with gstbasesrc.h anonymous union.
	* gst/Makefile.am:
	Added base.defs
	* gst/base.defs:
	New base elements definition files
	* gst/gst.defs:
	* gst/gst.override:
	Add base elements

=== release 0.10.1 ===

2005-12-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.10.1, "Krisimas Yakanaka"

2005-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* gst/Makefile.am:
	* gst/extend/Makefile.am:
	  install in pyexecdir as well

2005-12-22  Thomas Vander Stichele  <thomas at apestaart dot org>

	* pygst.py.in: give the correct error when not finding the version

2005-12-20  Edward Hervey  <edward@fluendo.com>

	* gst/gst-types.defs:
	Added GstStaticCaps and GstStaticPadTemplate, using the new GType.
	* gst/gst.defs:
	Doesn't return a const anymore.
	* gst/gstelementfactory.override:
	Wrapped gst_element_factory_get_static_pad_templates()

2005-12-19  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/gstbus.override (_wrap_gst_bus_add_watch): This function
	incorrectly returned self, which was causing the message bus to
	get prematurely destroyed by the Python interpreter. Now returns
	Py_None.

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override:
	ignore gst_object_sink

2005-12-19  Edward Hervey  <edward@fluendo.com>

	* gst/gstlibs.override:
	* gst/libs.defs:
	Properly wrap the gst_dp_* functions (cast gchar* to guint8*).

2005-12-18  Edward Hervey  <edward@fluendo.com>

	* gst/gst.override: